# pycon-italy-workshop-agentic-search

./: .gitignore  README.md  pyproject.toml  server.py
scripts/: fetch_model.py  lance_fts.py
services/: grep_docs.py
slides/: presentation-schedule.md  presentation.html  presentation.md
solutions/: bm25.py  colqwen.py  indexer.py  smoke_embeddings.py
tests/: test_embeddings.py
