[project]
name = "agentic-retrieval-mcp"
version = "0.1.0"
description = "Minimal local MCP server to show off search capabilities"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "lancedb>=0.30.2",
    "mlx-embeddings>=0.1.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.24",
    "sentence-transformers>=5.0",
    "torchvision>=0.27.0",
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
